# docs/swagger.json
@@ -6,17 +6,33 @@
         "version": "1.0"
     },
     "paths": {
-        "/api/login": {
+        "/api/login/adminloginInfo": {
             "get": {
                 "tags": [
                     "登录"
                 ],
-                "summary": "账号密码登录",
+                "summary": "获取管理员登录信息",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "number"
+                            "$ref": "#/definitions/login.AdminLoginInfo"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/login/logout": {
+            "get": {
+                "tags": [
+                    "登录"
+                ],
+                "summary": "注销",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -43,7 +59,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "number"
+                            "$ref": "#/definitions/login.AdminLoginInfo"
                         }
                     }
                 }
@@ -51,6 +67,17 @@
         }
     },
     "definitions": {
+        "login.AdminLoginInfo": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "phone": {
+                    "type": "string"
+                }
+            }
+        },
         "login.LoginDto": {
             "type": "object",
             "required": [
