# module/login/login.controller.go
@@ -14,11 +14,9 @@ type LoginDto struct {
 // @Summary 手机号密码登录
 // @Tags 登录
 // @Param params body login.LoginDto true "cansh "
-// @Success 200 {number} 1
+// @Success 200 {object} login.AdminLoginInfo
 // @Router /api/login/phone [post]
 func LoginByPhone(c *gin.Context) {
-	userId := 1
-
 	// 参数校验
 	var loginDto LoginDto
 	if err := c.ShouldBindJSON(&loginDto); err != nil {
@@ -33,24 +31,46 @@ func LoginByPhone(c *gin.Context) {
 		return
 	}
 
+	// 获取登录信息
+	var adminLoginInfo AdminLoginInfo
+	err = GetAdminLoginInfoByUserId(&adminLoginInfo, user.ID)
+	if err != nil {
+		core.ResError(c, core.ErrLoginInfoFail, err.Error())
+		return
+	}
+
 	// 查询成功，写登录态
 	session := sessions.Default(c)
 	session.Set("userId", user.ID)
 	session.Save()
 
-	core.ResSuccess(c, userId)
+	core.ResSuccess(c, adminLoginInfo)
 }
 
+// @Summary 获取管理员登录信息
+// @Tags 登录
+// @Router /api/login/adminloginInfo [get]
+// @Success 200 {object} login.AdminLoginInfo
+func GetAdminLoginInfo(c *gin.Context) {
+	userId := c.GetUint("userId")
+
+	var adminLoginInfo AdminLoginInfo
+	err := GetAdminLoginInfoByUserId(&adminLoginInfo, userId)
+	if err != nil {
+		core.ResError(c, core.ErrLoginInfoFail, err.Error())
+		return
+	}
+
+	core.ResSuccess(c, adminLoginInfo)
+}
+
+// @Summary 注销
+// @Tags 登录
+// @Router /api/login/logout [get]
+// @Success 200 {string} success
 func Logout(c *gin.Context) {
 	session := sessions.Default(c)
 	session.Clear()
 	session.Save()
 	core.ResSuccess(c, "success")
-}
-
-func LoginInfo(c *gin.Context) {
-	session := sessions.Default(c)
-	userId := session.Get("userId")
-
-	core.ResSuccess(c, userId)
 }
